service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: mon-test
spec:
  type: LoadBalancer
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 30007
      targetPort: 80
